@@ -14,13 +14,21 @@
 
 package com.starrocks.sql.optimizer;
 
+import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import com.starrocks.analysis.JoinOperator;
 import com.starrocks.catalog.ColocateTableIndex;
+import com.starrocks.catalog.Column;
+import com.starrocks.catalog.IcebergTable;
 import com.starrocks.catalog.system.SystemTable;
+import com.starrocks.connector.BucketProperty;
+import com.starrocks.qe.ConnectContext;
+import com.starrocks.qe.SessionVariable;
 import com.starrocks.server.GlobalStateMgr;
+import com.starrocks.sql.ast.JoinOperator;
+import com.starrocks.sql.common.ErrorType;
+import com.starrocks.sql.common.StarRocksPlannerException;
 import com.starrocks.sql.optimizer.base.CTEProperty;
 import com.starrocks.sql.optimizer.base.ColumnRefSet;
 import com.starrocks.sql.optimizer.base.DistributionCol;
@@ -30,18 +38,24 @@ import com.starrocks.sql.optimizer.base.EmptyDistributionProperty;
 import com.starrocks.sql.optimizer.base.EmptySortProperty;
 import com.starrocks.sql.optimizer.base.EquivalentDescriptor;
 import com.starrocks.sql.optimizer.base.HashDistributionDesc;
+import com.starrocks.sql.optimizer.base.HashDistributionDescBP;
 import com.starrocks.sql.optimizer.base.HashDistributionSpec;
 import com.starrocks.sql.optimizer.base.PhysicalPropertySet;
+import com.starrocks.sql.optimizer.base.RangeDistributionSpec;
 import com.starrocks.sql.optimizer.base.SortProperty;
 import com.starrocks.sql.optimizer.operator.Operator;
 import com.starrocks.sql.optimizer.operator.Projection;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalAIProjectOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalAssertOneRowOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEAnchorOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEConsumeOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalCTEProduceOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalExceptOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalFilterOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHashAggregateOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHashJoinOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalIcebergScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalIntersectOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalJDBCScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalJoinOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalLimitOperator;
@@ -51,10 +65,13 @@ import com.starrocks.sql.optimizer.operator.physical.PhysicalNestLoopJoinOperato
 import com.starrocks.sql.optimizer.operator.physical.PhysicalNoCTEOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalOlapScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalProjectOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalRawValuesOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalRepeatOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalSchemaScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalSetOperation;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTableFunctionOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTopNOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalUnionOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalValuesOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalWindowOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ColumnRefOperator;
@@ -65,13 +82,16 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static com.google.common.base.Preconditions.checkState;
+import static com.starrocks.sql.optimizer.base.HashDistributionDesc.SourceType.LOCAL;
 import static com.starrocks.sql.optimizer.base.HashDistributionDesc.SourceType.SHUFFLE_AGG;
 import static com.starrocks.sql.optimizer.base.HashDistributionDesc.SourceType.SHUFFLE_JOIN;
 
@@ -135,8 +155,7 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         EquivalentDescriptor leftDesc = leftScanDistributionSpec.getEquivDesc();
         EquivalentDescriptor rightDesc = rightScanDistributionSpec.getEquivDesc();
 
-
-        ColocateTableIndex colocateIndex = GlobalStateMgr.getCurrentColocateIndex();
+        ColocateTableIndex colocateIndex = GlobalStateMgr.getCurrentState().getColocateTableIndex();
         long leftTableId = leftDesc.getTableId();
         long rightTableId = rightDesc.getTableId();
 
@@ -171,23 +190,26 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
                                                            PhysicalPropertySet physicalPropertySet,
                                                            List<DistributionCol> leftOnPredicateColumns,
                                                            List<DistributionCol> rightOnPredicateColumns) {
-        // only HashDistributionSpec need update equivalentDescriptor
-        if (!physicalPropertySet.getDistributionProperty().isShuffle()) {
+        // Only specs carrying an EquivalentDescriptor need updating: hash
+        // (shuffle) and range (colocate). Other specs pass through unchanged.
+        DistributionSpec spec = physicalPropertySet.getDistributionProperty().getSpec();
+        EquivalentDescriptor equivDesc;
+        if (physicalPropertySet.getDistributionProperty().isShuffle()) {
+            equivDesc = ((HashDistributionSpec) spec).getEquivDesc();
+        } else if (spec instanceof RangeDistributionSpec) {
+            equivDesc = ((RangeDistributionSpec) spec).getEquivalentDescriptor();
+        } else {
             return physicalPropertySet;
         }
 
-        HashDistributionSpec distributionSpec = (HashDistributionSpec) physicalPropertySet.getDistributionProperty().getSpec();
-
-        EquivalentDescriptor equivDesc = distributionSpec.getEquivDesc();
-
         JoinOperator joinOperator = node.getJoinType();
-        if (joinOperator.isInnerJoin()) {
+        if (joinOperator.isAnyInnerJoin()) {
             for (int i = 0; i < leftOnPredicateColumns.size(); i++) {
                 DistributionCol leftCol = leftOnPredicateColumns.get(i);
                 DistributionCol rightCol = rightOnPredicateColumns.get(i);
                 equivDesc.unionDistributionCols(leftCol, rightCol);
             }
-        } else if (joinOperator.isLeftOuterJoin() || joinOperator.isRightOuterJoin()) {
+        } else if (joinOperator.isAnyLeftOuterJoin() || joinOperator.isRightOuterJoin()) {
             for (int i = 0; i < leftOnPredicateColumns.size(); i++) {
                 DistributionCol leftCol = leftOnPredicateColumns.get(i);
                 DistributionCol rightCol = rightOnPredicateColumns.get(i);
@@ -206,6 +228,87 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
     }
 
     @Override
+    public PhysicalPropertySet visitPhysicalUnion(PhysicalUnionOperator node, ExpressionContext context) {
+        return processPhysicalSetOperation(node, context);
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalExcept(PhysicalExceptOperator node, ExpressionContext context) {
+        return processPhysicalSetOperation(node, context);
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalIntersect(PhysicalIntersectOperator node, ExpressionContext context) {
+        return processPhysicalSetOperation(node, context);
+    }
+
+    private PhysicalPropertySet processPhysicalSetOperation(PhysicalSetOperation node, ExpressionContext context) {
+        DistributionSpec inputDistSpec = childrenOutputProperties.get(0).getDistributionProperty().getSpec();
+        if (inputDistSpec.getType().equals(DistributionSpec.DistributionType.ROUND_ROBIN)) {
+            return visitOperator(node, context);
+        }
+
+        if (!(inputDistSpec instanceof HashDistributionSpec)) {
+            return visitOperator(node, context);
+        }
+
+        HashDistributionSpec inputHashDistSpec = (HashDistributionSpec) inputDistSpec;
+        HashDistributionDesc inputHashDistDesc = inputHashDistSpec.getHashDistributionDesc();
+
+        if (inputHashDistDesc.isLocal()) {
+            List<DistributionCol> inputColumns = node.getChildOutputColumns().get(0)
+                    .stream()
+                    .map(col -> new DistributionCol(col.getId(), true))
+                    .collect(Collectors.toList());
+
+            List<DistributionCol> outputColumns = node.getOutputColumnRefOp()
+                    .stream()
+                    .map(col -> new DistributionCol(col.getId(), true))
+                    .collect(Collectors.toList());
+
+            List<List<DistributionCol>> outputShuffleColumns = Lists.newArrayList();
+            for (int i = 0; i < inputHashDistDesc.getDistributionCols().size(); ++i) {
+                DistributionCol inputCol = inputHashDistDesc.getDistributionCols().get(i);
+                List<DistributionCol> outputShuffleCols = IntStream.range(0, inputColumns.size())
+                        .filter(k -> inputHashDistSpec.getEquivDesc().isConnected(inputCol, inputColumns.get(k)))
+                        .mapToObj(outputColumns::get)
+                        .collect(Collectors.toList());
+                outputShuffleColumns.add(outputShuffleCols);
+            }
+            Preconditions.checkArgument(outputShuffleColumns.stream().allMatch(cols -> cols.size() > 0));
+            List<Integer> columnIds = outputShuffleColumns.stream()
+                    .map(cols -> cols.get(0).getColId())
+                    .collect(Collectors.toList());
+
+            HashDistributionDesc hashDistDesc = new HashDistributionDesc(columnIds, LOCAL);
+            EquivalentDescriptor equivalentDescriptor = new EquivalentDescriptor(
+                    inputHashDistSpec.getEquivDesc().getTableId(), inputHashDistSpec.getEquivDesc().getPartitionIds());
+
+            List<DistributionCol> shuffleColumns = outputShuffleColumns.stream()
+                    .map(cols -> cols.get(0))
+                    .collect(Collectors.toList());
+
+            equivalentDescriptor.initDistributionUnionFind(shuffleColumns);
+            outputShuffleColumns.forEach(columns -> columns.stream().skip(1)
+                    .forEach(col -> equivalentDescriptor.unionDistributionCols(columns.get(0), col)));
+
+            HashDistributionSpec hashDistSpec = new HashDistributionSpec(hashDistDesc, equivalentDescriptor);
+            PhysicalPropertySet propertySet =
+                    new PhysicalPropertySet(DistributionProperty.createProperty(hashDistSpec));
+            return mergeCTEProperty(propertySet);
+        } else {
+            List<Integer> columnIds = node.getOutputColumnRefOp().stream()
+                    .map(ColumnRefOperator::getId)
+                    .collect(Collectors.toList());
+            HashDistributionDesc hashDistDesc = new HashDistributionDesc(columnIds, SHUFFLE_JOIN);
+            HashDistributionSpec hashDistSpec = DistributionSpec.createHashDistributionSpec(hashDistDesc);
+            PhysicalPropertySet propertySet =
+                    new PhysicalPropertySet(DistributionProperty.createProperty(hashDistSpec));
+            return mergeCTEProperty(propertySet);
+        }
+    }
+
+    @Override
     public PhysicalPropertySet visitPhysicalHashJoin(PhysicalHashJoinOperator node, ExpressionContext context) {
         return mergeCTEProperty(visitPhysicalJoin(node, context));
     }
@@ -220,6 +323,19 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         return mergeCTEProperty(childrenOutputProperties.get(0));
     }
 
+    private PhysicalPropertySet resetSortProperty(PhysicalPropertySet propertySet) {
+        final SessionVariable sv = ConnectContext.get().getSessionVariable();
+        // Spill partition join and partition join operations break ordering.
+        // When these optimizations are enabled, we need to clear the property.
+        boolean needResetSortProperty = sv.isEnableSpill() || sv.enablePartitionHashJoin();
+        if (needResetSortProperty) {
+            propertySet =
+                    new PhysicalPropertySet(propertySet.getDistributionProperty(), EmptySortProperty.INSTANCE,
+                            propertySet.getCteProperty());
+        }
+        return propertySet;
+    }
+
     private PhysicalPropertySet visitPhysicalJoin(PhysicalJoinOperator node, ExpressionContext context) {
         checkState(childrenOutputProperties.size() == 2);
         PhysicalPropertySet leftChildOutputProperty = childrenOutputProperties.get(0);
@@ -227,7 +343,7 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
 
         // 1. Distribution is broadcast
         if (rightChildOutputProperty.getDistributionProperty().isBroadcast()) {
-            return leftChildOutputProperty;
+            return resetSortProperty(leftChildOutputProperty);
         }
         // 2. Distribution is shuffle
         ColumnRefSet leftChildColumns = context.getChildOutputColumns(0);
@@ -236,6 +352,48 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
 
         List<DistributionCol> leftOnPredicateColumns = joinHelper.getLeftCols();
         List<DistributionCol> rightOnPredicateColumns = joinHelper.getRightCols();
+
+        // Range-colocate join: both children are RangeDistributionSpec. The
+        // dominated output side mirrors the hash-colocate mapping in
+        // computeColocateJoinOutputProperty: right-family joins (right outer /
+        // semi / anti) output the right-side range spec, full-outer outputs the
+        // null-relaxed left-side spec (either side may be NULL-padded), and
+        // everything else (inner / left outer / left semi / left anti) outputs
+        // the left-side spec.
+        DistributionSpec leftRawSpec = leftChildOutputProperty.getDistributionProperty().getSpec();
+        DistributionSpec rightRawSpec = rightChildOutputProperty.getDistributionProperty().getSpec();
+        if (leftRawSpec instanceof RangeDistributionSpec && rightRawSpec instanceof RangeDistributionSpec) {
+            JoinOperator joinType = node.getJoinType();
+            DistributionSpec dominatedRangeSpec;
+            if (joinType.isRightJoin()) {
+                dominatedRangeSpec = rightRawSpec;
+            } else if (joinType.isFullOuterJoin()) {
+                RangeDistributionSpec leftRange = (RangeDistributionSpec) leftRawSpec;
+                dominatedRangeSpec = leftRange.getNullRelaxSpec(leftRange.getEquivalentDescriptor());
+            } else {
+                dominatedRangeSpec = leftRawSpec;
+            }
+            PhysicalPropertySet outputProperty = createPropertySetByDistribution(dominatedRangeSpec);
+            return updateEquivalentDescriptor(node, outputProperty,
+                    leftOnPredicateColumns, rightOnPredicateColumns);
+        }
+
+        // Defense in depth: mixed (Range, Hash) reaching the deriver means the
+        // upstream Guarantor's range→hash normalization did not run.  Fail loud
+        // — the deriver cannot install exchange enforcers itself, and silently
+        // returning a derived property risks downstream misclassification of
+        // the join mode.
+        boolean leftIsRange = leftRawSpec instanceof RangeDistributionSpec;
+        boolean rightIsRange = rightRawSpec instanceof RangeDistributionSpec;
+        boolean leftIsHash = leftRawSpec instanceof HashDistributionSpec;
+        boolean rightIsHash = rightRawSpec instanceof HashDistributionSpec;
+        if ((leftIsRange && rightIsHash) || (leftIsHash && rightIsRange)) {
+            throw new StarRocksPlannerException(
+                    "Mixed range-distribution / hash-distribution JOIN reached output-property "
+                            + "derivation; the upstream Guarantor was expected to normalize the "
+                            + "range side to hash. left=" + leftRawSpec + ", right=" + rightRawSpec,
+                    ErrorType.INTERNAL_ERROR);
+        }
 
         DistributionProperty leftChildDistributionProperty = leftChildOutputProperty.getDistributionProperty();
         DistributionProperty rightChildDistributionProperty = rightChildOutputProperty.getDistributionProperty();
@@ -259,11 +417,11 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
                 // bucket join
                 PhysicalPropertySet outputProperty = computeBucketJoinDistributionProperty(node.getJoinType(),
                         leftDistributionSpec, leftChildOutputProperty);
+                outputProperty = resetSortProperty(outputProperty);
                 return updateEquivalentDescriptor(node, outputProperty,
                         leftOnPredicateColumns, rightOnPredicateColumns);
 
-            } else if ((leftDistributionDesc.isShuffle() || leftDistributionDesc.isShuffleEnforce()) &&
-                    (rightDistributionDesc.isShuffle()) || rightDistributionDesc.isShuffleEnforce()) {
+            } else if (leftDistributionDesc.isShuffleLike() && rightDistributionDesc.isShuffleLike()) {
                 // shuffle join
                 PhysicalPropertySet outputProperty = computeShuffleJoinOutputProperty(node.getJoinType(),
                         leftDistributionDesc.getDistributionCols(), rightDistributionDesc.getDistributionCols());
@@ -271,17 +429,22 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
                         leftOnPredicateColumns, rightOnPredicateColumns);
 
             } else {
-                LOG.error("Children output property distribution error.left child property: {}, " +
-                                "right child property: {}, join node: {}",
-                        leftChildDistributionProperty, rightChildDistributionProperty, node);
-                throw new IllegalStateException("Children output property distribution error.");
+                throw childrenDistributionError(node, leftChildDistributionProperty, rightChildDistributionProperty);
             }
         } else {
-            LOG.error("Children output property distribution error.left child property: {}, " +
-                            "right child property: {}, join node: {}",
-                    leftChildDistributionProperty, rightChildDistributionProperty, node);
-            throw new IllegalStateException("Children output property distribution error.");
+            throw childrenDistributionError(node, leftChildDistributionProperty, rightChildDistributionProperty);
         }
+    }
+
+    private static StarRocksPlannerException childrenDistributionError(PhysicalJoinOperator node,
+                                                                       DistributionProperty leftProperty,
+                                                                       DistributionProperty rightProperty) {
+        LOG.error("Children output property distribution error. left={}, right={}, join={}",
+                leftProperty, rightProperty, node);
+        return new StarRocksPlannerException(
+                "Children output property distribution error. left=" + leftProperty
+                        + ", right=" + rightProperty,
+                ErrorType.INTERNAL_ERROR);
     }
 
     private PhysicalPropertySet computeShuffleJoinOutputProperty(JoinOperator joinType,
@@ -339,6 +502,12 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
     }
 
     @Override
+    public PhysicalPropertySet visitPhysicalAIProject(PhysicalAIProjectOperator node, ExpressionContext context) {
+        checkState(this.childrenOutputProperties.size() == 1);
+        return childrenOutputProperties.get(0);
+    }
+
+    @Override
     public PhysicalPropertySet visitPhysicalHashAggregate(PhysicalHashAggregateOperator node,
                                                           ExpressionContext context) {
         checkState(this.childrenOutputProperties.size() == 1);
@@ -350,27 +519,52 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
     public PhysicalPropertySet visitPhysicalRepeat(PhysicalRepeatOperator node, ExpressionContext context) {
         checkState(childrenOutputProperties.size() == 1);
         PhysicalPropertySet childPropertySet = childrenOutputProperties.get(0);
+
+        // calculate the Intersection of RepeatColumnRef
         List<ColumnRefOperator> subRefs = Lists.newArrayList(node.getRepeatColumnRef().get(0));
         node.getRepeatColumnRef().forEach(subRefs::retainAll);
-        Set<ColumnRefOperator> allGroupingRefs = Sets.newHashSet();
-
-        node.getRepeatColumnRef().forEach(allGroupingRefs::addAll);
-        subRefs.forEach(allGroupingRefs::remove);
 
         DistributionProperty childDistribution = childPropertySet.getDistributionProperty();
-        // update null distribution info to null relax for allGroupingRefs
-        if (!allGroupingRefs.isEmpty() && childDistribution.isShuffle()) {
-            HashDistributionSpec distributionSpec = (HashDistributionSpec) childDistribution.getSpec();
-            EquivalentDescriptor newEquivDesc = distributionSpec.getEquivDesc().copy();
-            newEquivDesc.clearNullStrictUnionFind();
-            HashDistributionSpec newDistributionSpec = distributionSpec.getNullRelaxSpec(newEquivDesc);
-            DistributionProperty newDistributionProperty = DistributionProperty.createProperty(
-                    newDistributionSpec,
-                    childPropertySet.getDistributionProperty().isCTERequired());
-            return new PhysicalPropertySet(newDistributionProperty, childPropertySet.getSortProperty(),
-                    childPropertySet.getCteProperty());
+        // only if the Intersection of RepeatColumnRef is the superset of the childrenOutputProperties
+        // we can use childrenOutputProperties as RepeatNode's output property
+        // such as RepeatColumnRef is (cola,colb),(cola), and childrenOutputProperties is hash(cola)
+        // since cola won't be inserted with null value, it's safe to use childrenOutputProperties
+        // if RepeatColumnRef is (cola,colb),(cola), and childrenOutputProperties is hash(cola,colb)
+        // since cola will be inserted with null value, it's unsafe to use hash(cola,colb)
+        DistributionProperty outputDistribution = EmptyDistributionProperty.INSTANCE;
+        DistributionSpec childSpec = childDistribution.getSpec();
+        Set<Integer> commonRefs = subRefs.stream().map(ColumnRefOperator::getId).collect(Collectors.toSet());
+        if (childDistribution.isShuffle()) {
+            boolean canFollowChild = true;
+            HashDistributionSpec childDistributionSpec = (HashDistributionSpec) childSpec;
+            for (DistributionCol col : childDistributionSpec.getHashDistributionDesc().getDistributionCols()) {
+                if (!commonRefs.contains(col.getColId())) {
+                    canFollowChild = false;
+                    break;
+                }
+            }
+            if (canFollowChild) {
+                outputDistribution = childDistribution;
+            }
+        } else if (childSpec instanceof RangeDistributionSpec) {
+            // Range variant: use direct column-id intersection (not equivalence)
+            // because Repeat nulls out physical columns; equivalence through
+            // nulled columns is unsafe.
+            RangeDistributionSpec childRangeSpec = (RangeDistributionSpec) childSpec;
+            boolean canFollowChild = true;
+            for (DistributionCol col : childRangeSpec.getColocateColumns()) {
+                if (!commonRefs.contains(col.getColId())) {
+                    canFollowChild = false;
+                    break;
+                }
+            }
+            if (canFollowChild) {
+                outputDistribution = childDistribution;
+            }
         }
-        return childPropertySet;
+
+        return new PhysicalPropertySet(outputDistribution, childPropertySet.getSortProperty(),
+                childPropertySet.getCteProperty());
     }
 
     @Override
@@ -382,11 +576,74 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
             return createPropertySetByDistribution(new HashDistributionSpec(
                     new HashDistributionDesc(((HashDistributionSpec) olapDistributionSpec).getShuffleColumns(),
                             HashDistributionDesc.SourceType.LOCAL), equivDesc));
+        } else if (olapDistributionSpec instanceof RangeDistributionSpec) {
+            // Rebuild with selected partitions (partition pruning ran between
+            // RelationTransformer skeleton construction and this point).
+            RangeDistributionSpec skeleton = (RangeDistributionSpec) olapDistributionSpec;
+            EquivalentDescriptor equivDesc = new EquivalentDescriptor(
+                    node.getTable().getId(), node.getSelectedPartitionId());
+            equivDesc.initDistributionUnionFind(skeleton.getColocateColumns());
+            return createPropertySetByDistribution(
+                    new RangeDistributionSpec(skeleton.getColocateColumns(), equivDesc));
         } else if (olapDistributionSpec.getType() == DistributionSpec.DistributionType.ANY) {
             return PhysicalPropertySet.EMPTY;
         } else {
             return createPropertySetByDistribution(olapDistributionSpec);
         }
+    }
+
+    private Optional<HashDistributionDesc> computeLakeHashDistributionDesc(HashDistributionDesc require,
+                                                                           List<BucketProperty> bucketProperties,
+                                                                           Map<ColumnRefOperator, Column> map) {
+        ColumnRefSet requireColumnRefSet = ColumnRefSet.createByIds(
+                require.getDistributionCols().stream().map(DistributionCol::getColId).toList());
+
+        List<Integer> bucketColumnIds = new ArrayList<>();
+        Map<Integer, Integer> id2Index = new HashMap<>();
+        for (int i = 0; i < bucketProperties.size(); i++) {
+            Column column = bucketProperties.get(i).getColumn();
+            for (Map.Entry<ColumnRefOperator, Column> entry : map.entrySet()) {
+                if (entry.getKey().getName().equals(column.getName())) {
+                    bucketColumnIds.add(entry.getKey().getId());
+                    id2Index.put(entry.getKey().getId(), i);
+                    break;
+                }
+            }
+        }
+        ColumnRefSet bucketColumnRefSet = ColumnRefSet.createByIds(bucketColumnIds);
+        requireColumnRefSet.intersect(bucketColumnRefSet);
+        if (requireColumnRefSet.isEmpty()) {
+            return Optional.empty();
+        } else {
+            // respect the order of column shuffle
+            List<BucketProperty> usedBP = require.getDistributionCols().stream()
+                    .map(DistributionCol::getColId).filter(requireColumnRefSet::contains)
+                    .map(id2Index::get).map(bucketProperties::get).toList();
+            return Optional.of(new HashDistributionDescBP(
+                    requireColumnRefSet.getStream().toList(), LOCAL, usedBP));
+        }
+    }
+
+    @Override
+    public PhysicalPropertySet visitPhysicalIcebergScan(PhysicalIcebergScanOperator node, ExpressionContext context) {
+        // according bucket properties to compute distribution that meet requirement
+        DistributionSpec distributionSpec = requirements.getDistributionProperty().getSpec();
+        if (ConnectContext.get().getSessionVariable().isEnableBucketAwareExecutionOnLake() &&
+                distributionSpec instanceof HashDistributionSpec hashDistribution) {
+            IcebergTable table = (IcebergTable) node.getTable();
+            if (table.hasBucketProperties()) {
+                List<BucketProperty> properties = table.getBucketProperties();
+                Optional<HashDistributionDesc> hashDistributionDesc = computeLakeHashDistributionDesc(
+                        hashDistribution.getHashDistributionDesc(), properties, node.getColRefToColumnMetaMap());
+                if (hashDistributionDesc.isPresent()) {
+                    HashDistributionDesc nullStrictDesc = hashDistributionDesc.get().getNullStrictDesc();
+                    return createPropertySetByDistribution(new HashDistributionSpec(nullStrictDesc));
+                }
+            }
+            LOG.debug("table name: " + node.getTable().getName() + ", requirement distribution type: " +
+                    distributionSpec.toString());
+        }
+        return mergeCTEProperty(PhysicalPropertySet.EMPTY);
     }
 
     @Override
@@ -422,15 +679,15 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         List<Integer> partitionColumnRefSet = new ArrayList<>();
 
         node.getPartitionExpressions().forEach(e -> partitionColumnRefSet.addAll(
-                Arrays.stream(e.getUsedColumns().getColumnIds()).boxed().collect(Collectors.toList())));
+                Arrays.stream(e.getUsedColumns().getColumnIds()).boxed().toList()));
 
-        SortProperty sortProperty = SortProperty.createProperty(node.getEnforceOrderBy());
+        SortProperty sortProperty = SortProperty.createProperty(node.getEnforceOrderBy(), partitionColumnRefSet);
 
         DistributionProperty distributionProperty;
         if (partitionColumnRefSet.isEmpty()) {
             distributionProperty = DistributionProperty.createProperty(DistributionSpec.createGatherDistributionSpec());
         } else {
-            // Use child distribution
+            // Use child's distribution
             distributionProperty = childrenOutputProperties.get(0).getDistributionProperty();
         }
         return new PhysicalPropertySet(distributionProperty, sortProperty,
@@ -516,20 +773,36 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
         return createGatherPropertySet();
     }
 
+    @Override
+    public PhysicalPropertySet visitPhysicalRawValues(PhysicalRawValuesOperator node, ExpressionContext context) {
+        return createGatherPropertySet();
+    }
 
     private void updatePropertyWithProjection(Projection projection, PhysicalPropertySet oldProperty) {
         if (projection == null) {
             return;
         }
 
-        if (!(oldProperty.getDistributionProperty().getSpec() instanceof HashDistributionSpec)) {
+        // Select the spec's colocate columns + its EquivalentDescriptor.
+        // Range spec uses the same EquivalentDescriptor plumbing as hash, so
+        // the same equivalence-union logic applies.
+        DistributionSpec spec = oldProperty.getDistributionProperty().getSpec();
+        List<DistributionCol> distributionCols;
+        EquivalentDescriptor equivDesc;
+        if (spec instanceof HashDistributionSpec) {
+            HashDistributionSpec hashSpec = (HashDistributionSpec) spec;
+            distributionCols = hashSpec.getShuffleColumns();
+            equivDesc = hashSpec.getEquivDesc();
+        } else if (spec instanceof RangeDistributionSpec) {
+            RangeDistributionSpec rangeSpec = (RangeDistributionSpec) spec;
+            distributionCols = rangeSpec.getColocateColumns();
+            equivDesc = rangeSpec.getEquivalentDescriptor();
+        } else {
             return;
         }
 
-        HashDistributionSpec distributionSpec =
-                (HashDistributionSpec) oldProperty.getDistributionProperty().getSpec();
         final Map<Integer, DistributionCol> idToDistributionCol = Maps.newHashMap();
-        distributionSpec.getShuffleColumns().forEach(e -> idToDistributionCol.put(e.getColId(), e));
+        distributionCols.forEach(e -> idToDistributionCol.put(e.getColId(), e));
 
         for (Map.Entry<ColumnRefOperator, ScalarOperator> entry : projection.getColumnRefMap().entrySet()) {
             ColumnRefSet usedCols = entry.getValue().getUsedColumns();
@@ -537,12 +810,12 @@ public class OutputPropertyDeriver extends PropertyDeriverBase<PhysicalPropertyS
             Optional<Boolean> nullStrictInfo = remainDistributionFunc(entry.getValue(), idToDistributionCol);
             if (nullStrictInfo.isPresent()) {
                 if (nullStrictInfo.get()) {
-                    distributionSpec.getEquivDesc().unionDistributionCols(
+                    equivDesc.unionDistributionCols(
                             new DistributionCol(entry.getKey().getId(), true),
                             idToDistributionCol.get(usedCols.getFirstId())
                     );
                 } else {
-                    distributionSpec.getEquivDesc().unionNullRelaxCols(
+                    equivDesc.unionNullRelaxCols(
                             new DistributionCol(entry.getKey().getId(), false),
                             idToDistributionCol.get(usedCols.getFirstId()).getNullRelaxCol()
                     );
