@@ -34,46 +34,72 @@
 
 package com.starrocks.load.routineload;
 
-import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.starrocks.catalog.Database;
-import com.starrocks.catalog.Table;
+import com.starrocks.catalog.OlapTable;
+import com.starrocks.catalog.PartitionNames;
 import com.starrocks.common.InternalErrorCode;
-import com.starrocks.common.UserException;
+import com.starrocks.common.StarRocksException;
 import com.starrocks.common.jmockit.Deencapsulation;
 import com.starrocks.common.util.KafkaUtil;
+import com.starrocks.common.util.PulsarUtil;
+import com.starrocks.common.util.UUIDUtil;
 import com.starrocks.load.RoutineLoadDesc;
+import com.starrocks.metric.TableMetricsEntity;
+import com.starrocks.metric.TableMetricsRegistry;
 import com.starrocks.persist.EditLog;
+import com.starrocks.persist.OriginStatementInfo;
 import com.starrocks.persist.RoutineLoadOperation;
 import com.starrocks.qe.ConnectContext;
-import com.starrocks.qe.OriginStatement;
 import com.starrocks.server.GlobalStateMgr;
+import com.starrocks.server.RunMode;
 import com.starrocks.sql.ast.AlterRoutineLoadStmt;
+import com.starrocks.sql.ast.ColumnSeparator;
 import com.starrocks.sql.ast.CreateRoutineLoadStmt;
+import com.starrocks.sql.ast.ImportColumnDesc;
+import com.starrocks.sql.ast.RowDelimiter;
+import com.starrocks.sql.ast.expression.BinaryPredicate;
+import com.starrocks.sql.ast.expression.BinaryType;
+import com.starrocks.sql.ast.expression.IntLiteral;
+import com.starrocks.sql.ast.expression.SlotRef;
 import com.starrocks.thrift.TKafkaRLTaskProgress;
+import com.starrocks.thrift.TRoutineLoadJobInfo;
 import com.starrocks.transaction.TransactionState;
 import com.starrocks.utframe.UtFrameUtils;
+import com.starrocks.warehouse.cngroup.ComputeResource;
 import mockit.Expectations;
 import mockit.Injectable;
 import mockit.Mock;
 import mockit.MockUp;
 import mockit.Mocked;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 
 public class RoutineLoadJobTest {
+
+    @BeforeEach
+    public void setUp() throws Exception {
+        // Initialize test environment
+        UtFrameUtils.setUpForPersistTest();
+    }
+
+    @AfterEach
+    public void tearDown() {
+        UtFrameUtils.tearDownForPersisTest();
+    }
+
     @Test
-    public void testAfterAbortedReasonOffsetOutOfRange(@Mocked GlobalStateMgr globalStateMgr,
-                                                       @Injectable TransactionState transactionState,
+    public void testAfterAbortedReasonOffsetOutOfRange(@Injectable TransactionState transactionState,
                                                        @Injectable RoutineLoadTaskInfo routineLoadTaskInfo)
-            throws UserException {
+            throws StarRocksException {
 
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
@@ -96,17 +122,19 @@ public class RoutineLoadJobTest {
             }
         };
 
-        String txnStatusChangeReasonString = TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString();
+        String txnStatusChangeReasonString = TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString();
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
-        routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
+        routineLoadJob.afterAborted(transactionState, txnStatusChangeReasonString);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
     }
 
     @Test
-    public void testAfterAborted(@Injectable TransactionState transactionState,
-                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws UserException {
+    public void testAfterAborted(@Mocked RoutineLoadMgr routineLoadMgr,
+                                 @Injectable TransactionState transactionState,
+                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws StarRocksException {
+        Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
         long txnId = 1L;
@@ -114,10 +142,12 @@ public class RoutineLoadJobTest {
         RLTaskTxnCommitAttachment attachment = new RLTaskTxnCommitAttachment();
         TKafkaRLTaskProgress tKafkaRLTaskProgress = new TKafkaRLTaskProgress();
         tKafkaRLTaskProgress.partitionCmtOffset = Maps.newHashMap();
-        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress);
+        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
         Deencapsulation.setField(attachment, "progress", kafkaProgress);
 
-        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress);
+        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
 
         new Expectations() {
             {
@@ -135,7 +165,10 @@ public class RoutineLoadJobTest {
                 result = Lists.newArrayList();
                 routineLoadTaskInfo.getId();
                 minTimes = 0;
-                result = UUID.randomUUID();
+                result = UUIDUtil.genUUID();
+                routineLoadMgr.getJob(anyLong);
+                minTimes = 0;
+                result = routineLoadJob;
             }
         };
 
@@ -146,86 +179,279 @@ public class RoutineLoadJobTest {
         };
 
         String txnStatusChangeReasonString = "no data";
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
         Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
         Deencapsulation.setField(routineLoadJob, "progress", currentProgress);
-        routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
+        TableMetricsEntity entity =
+                TableMetricsRegistry.getInstance().getMetricsEntity(routineLoadTaskInfo.getJob().tableId);
+        long prevValue = entity.counterRoutineLoadAbortedTasksTotal.getValue();
+        routineLoadJob.afterAborted(transactionState, txnStatusChangeReasonString);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
-        Assert.assertEquals(new Long(1), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assertions.assertEquals(Long.valueOf(1), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assertions.assertTrue(routineLoadJob.getOtherMsg().endsWith(txnStatusChangeReasonString), routineLoadJob.getOtherMsg());
+
+        Assertions.assertEquals(Long.valueOf(prevValue + 1), entity.counterRoutineLoadAbortedTasksTotal.getValue());
+
+        routineLoadTaskInfoList.clear();
+        routineLoadJob.afterAborted(transactionState, txnStatusChangeReasonString);
+        Assertions.assertEquals(Long.valueOf(2), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assertions.assertEquals(Long.valueOf(prevValue + 2), entity.counterRoutineLoadAbortedTasksTotal.getValue());
     }
 
     @Test
-    public void testGetShowInfo(@Mocked KafkaProgress kafkaProgress) {
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
-        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
-        ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
-                TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
-        Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
-        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+    public void testAfterCommitted(@Mocked RoutineLoadMgr routineLoadMgr,
+                                   @Injectable TransactionState transactionState,
+                                   @Injectable KafkaTaskInfo routineLoadTaskInfo) throws StarRocksException {
+        Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
+        List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+        routineLoadTaskInfoList.add(routineLoadTaskInfo);
+        long txnId = 1L;
 
+        RLTaskTxnCommitAttachment attachment = new RLTaskTxnCommitAttachment();
+        TKafkaRLTaskProgress tKafkaRLTaskProgress = new TKafkaRLTaskProgress();
+        tKafkaRLTaskProgress.partitionCmtOffset = Maps.newHashMap();
+        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+        Deencapsulation.setField(attachment, "progress", kafkaProgress);
+
+        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+
+        new Expectations() {
+            {
+                transactionState.getTransactionId();
+                minTimes = 0;
+                result = txnId;
+                routineLoadTaskInfo.getTxnId();
+                minTimes = 0;
+                result = txnId;
+                transactionState.getTxnCommitAttachment();
+                minTimes = 0;
+                result = attachment;
+                routineLoadTaskInfo.getPartitions();
+                minTimes = 0;
+                result = Lists.newArrayList();
+                routineLoadTaskInfo.getId();
+                minTimes = 0;
+                result = UUIDUtil.genUUID();
+                routineLoadMgr.getJob(anyLong);
+                minTimes = 0;
+                result = routineLoadJob;
+            }
+        };
+
+        new MockUp<RoutineLoadJob>() {
+            @Mock
+            void writeUnlock() {
+            }
+        };
+
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+        Deencapsulation.setField(routineLoadJob, "progress", currentProgress);
+        TableMetricsEntity entity =
+                TableMetricsRegistry.getInstance().getMetricsEntity(routineLoadTaskInfo.getJob().tableId);
+        long prevValue = entity.counterRoutineLoadCommittedTasksTotal.getValue();
+        routineLoadJob.afterCommitted(transactionState);
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assertions.assertEquals(Long.valueOf(1), Deencapsulation.getField(routineLoadJob, "committedTaskNum"));
+
+        Assertions.assertEquals(Long.valueOf(prevValue + 1), entity.counterRoutineLoadCommittedTasksTotal.getValue());
+    }
+
+    @Test
+    public void testPulsarGetShowInfo() {
+        {
+            // PAUSE state
+            PulsarRoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertTrue(showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertTrue(loadJobInfo.getReasons_of_state_changed().equals(errorReason.toString()));
+        }
+
+        {
+            // PAUSE state
+            PulsarRoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(
+                    1L, "task1", 1, 1, "http://url", "task-1", "sub-1");
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertTrue(showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertTrue(loadJobInfo.getReasons_of_state_changed().equals(errorReason.toString()));
+        }
+    }
+
+    @Test
+    public void testKafkaGetShowInfo() throws StarRocksException {
+        {
+            // PAUSE state
+            KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertEquals(true, showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertTrue(loadJobInfo.getReasons_of_state_changed().equals(errorReason.toString()));
+        }
+
+        {
+            // Progress
+            KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+
+            Map<Integer, Long> partitionOffsets = Maps.newHashMap();
+            partitionOffsets.put(Integer.valueOf(0), Long.valueOf(1234));
+            KafkaProgress kafkaProgress = new KafkaProgress(partitionOffsets);
+            Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+
+            Map<Integer, Long> partitionOffsetTimestamps = Maps.newHashMap();
+            partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(1701411708410L));
+            KafkaProgress kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
+            Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+            ((Map<String, String>) Deencapsulation.getField(routineLoadJob, "jobProperties"))
+                    .put("pause_on_fatal_parse_error", "true");
+            routineLoadJob.setPartitionOffset(0, 12345);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertEquals("{\"0\":\"12345\"}", showInfo.get(20));
+            //The displayed value is the actual value - 1
+            Assertions.assertEquals("{\"0\":\"1233\"}", showInfo.get(14));
+            Assertions.assertEquals("{\"0\":\"1701411708409\"}", showInfo.get(15));
+            Assertions.assertTrue(showInfo.get(10).contains("\"pause_on_fatal_parse_error\":\"true\""));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("{\"0\":\"12345\"}", loadJobInfo.getLatest_source_position());
+            //The displayed value is the actual value - 1
+            Assertions.assertEquals("{\"0\":\"1233\"}", loadJobInfo.getProgress());
+        }
+
+        {
+            // UNSTABLE substate
+            KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+
+            Map<Integer, Long> partitionOffsetTimestamps = Maps.newHashMap();
+            partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(1701411708410L));
+            KafkaProgress kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
+            Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+            ((Map<String, String>) Deencapsulation.getField(routineLoadJob, "jobProperties"))
+                    .put("pause_on_fatal_parse_error", "false");
+
+            routineLoadJob.updateState(RoutineLoadJob.JobState.RUNNING, null);
+            // The job is set unstable due to the progress is too slow.
+            routineLoadJob.updateSubstate();
+            Assertions.assertTrue(routineLoadJob.isUnstable());
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertEquals("UNSTABLE", showInfo.get(7));
+            // The lag [xxx] of partition [0] exceeds Config.routine_load_unstable_threshold_second [3600]
+            Assertions.assertTrue(showInfo.get(16).contains(
+                    "partition [0] exceeds Config.routine_load_unstable_threshold_second [3600]"));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("RUNNING", loadJobInfo.getState());
+            Assertions.assertEquals("", loadJobInfo.getReasons_of_state_changed());
+
+            partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(System.currentTimeMillis()));
+            kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
+            Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+            // The job is set stable due to the progress is kept up.
+            routineLoadJob.updateSubstate();
+            showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertEquals("RUNNING", showInfo.get(7));
+            Assertions.assertEquals("", showInfo.get(16));
+
+            loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("RUNNING", loadJobInfo.getState());
+            Assertions.assertEquals("", loadJobInfo.getReasons_of_state_changed());
+
+            // The job is set stable.
+            routineLoadJob.updateSubstateStable();
+            showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertEquals("RUNNING", showInfo.get(7));
+            Assertions.assertEquals("", showInfo.get(16));
+            Assertions.assertTrue(showInfo.get(10).contains("\"pause_on_fatal_parse_error\":\"false\""));
+
+            loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("RUNNING", loadJobInfo.getState());
+            Assertions.assertEquals("", loadJobInfo.getReasons_of_state_changed());
+        }
+    }
+
+    @Test
+    public void testGetShowInfoSharedData() {
+        new MockUp<RunMode>() {
+            @Mock
+            public RunMode getCurrentRunMode() {
+                return RunMode.SHARED_DATA;
+            }
+        };
+        GlobalStateMgr.getCurrentState().getWarehouseMgr().initDefaultWarehouse();
+
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        routineLoadJob.setWarehouseId(0L);
         List<String> showInfo = routineLoadJob.getShowInfo();
-        Assert.assertEquals(true, showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
-                .anyMatch(entity -> entity.equals(errorReason.toString())));
+        Assertions.assertEquals(23, showInfo.size());
+        Assertions.assertEquals("default_warehouse", showInfo.get(20));
+
+        routineLoadJob.setWarehouseId(1L);
+        showInfo = routineLoadJob.getShowInfo();
+        Assertions.assertEquals("Warehouse id: 1 not exist.", showInfo.get(20));
     }
 
     @Test
-    public void testUpdateWhileDbDeleted(@Mocked GlobalStateMgr globalStateMgr) throws UserException {
-        new Expectations() {
-            {
-                globalStateMgr.getDb(anyLong);
-                minTimes = 0;
-                result = null;
-            }
-        };
-
+    public void testUpdateWhileDbDeleted() throws StarRocksException {
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         routineLoadJob.update();
 
-        Assert.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
     }
 
     @Test
-    public void testUpdateWhileTableDeleted(@Mocked GlobalStateMgr globalStateMgr,
-                                            @Injectable Database database) throws UserException {
-        new Expectations() {
-            {
-                globalStateMgr.getDb(anyLong);
-                minTimes = 0;
-                result = database;
-                database.getTable(anyLong);
-                minTimes = 0;
-                result = null;
-            }
-        };
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+    public void testUpdateWhileTableDeleted() throws StarRocksException {
+        long dbId = 11L;
+        Database database = new Database(dbId, "testDb");
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(
+                1L, "test", dbId, 111L, "brokerList", "topic");
         routineLoadJob.update();
 
-        Assert.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
     }
 
     @Test
-    public void testUpdateWhilePartitionChanged(@Mocked GlobalStateMgr globalStateMgr,
-                                                @Injectable Database database,
-                                                @Injectable Table table,
-                                                @Injectable KafkaProgress kafkaProgress) throws UserException {
+    public void testUpdateWhilePartitionChanged(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
 
-        new Expectations() {
-            {
-                globalStateMgr.getDb(anyLong);
-                minTimes = 0;
-                result = database;
-                database.getTable(anyLong);
-                minTimes = 0;
-                result = table;
-            }
-        };
+        long dbId = 11L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
 
         new MockUp<KafkaUtil>() {
             @Mock
             public List<Integer> getAllKafkaPartitions(String brokerList, String topic,
-                                                       ImmutableMap<String, String> properties) throws UserException {
+                                                       ImmutableMap<String, String> properties,
+                                                       ComputeResource computeResource) throws StarRocksException {
                 return Lists.newArrayList(1, 2, 3);
             }
         };
@@ -237,29 +463,377 @@ public class RoutineLoadJobTest {
             }
         };
 
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(111L, "test", dbId, 22L, "brokerList", "topic");
         Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
         Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
         routineLoadJob.update();
 
-        Assert.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
     }
 
     @Test
-    public void testUpdateNumOfDataErrorRowMoreThanMax(@Mocked GlobalStateMgr globalStateMgr) {
+    public void testUpdateKafkaPartitionsContainsAllShrink(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 12L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<KafkaUtil>() {
+            @Mock
+            public List<Integer> getAllKafkaPartitions(String brokerList, String topic,
+                                                       ImmutableMap<String, String> properties,
+                                                       ComputeResource computeResource) throws StarRocksException {
+                return Lists.newArrayList(1, 2);
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(111L, "test", dbId, 22L, "brokerList", "topic");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        Deencapsulation.setField(routineLoadJob, "currentKafkaPartitions", Lists.newArrayList(1, 2, 3));
+        routineLoadJob.update();
+
+        // shrink: currentKafkaPartitions = [1,2,3] containsAll [1,2] && size > 2 -> reschedule with [1,2]
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+        Assertions.assertEquals(Lists.newArrayList(1, 2),
+                Deencapsulation.getField(routineLoadJob, "currentKafkaPartitions"));
+    }
+
+    @Test
+    public void testUpdateKafkaFetchErrorPauses(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 13L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<KafkaUtil>() {
+            @Mock
+            public List<Integer> getAllKafkaPartitions(String brokerList, String topic,
+                                                       ImmutableMap<String, String> properties,
+                                                       ComputeResource computeResource) throws StarRocksException {
+                throw new StarRocksException("kafka broker unreachable");
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(112L, "test", dbId, 22L, "brokerList", "topic");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.NEED_SCHEDULE);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        ErrorReason reason = routineLoadJob.pauseReason;
+        Assertions.assertEquals(InternalErrorCode.PARTITIONS_ERR, reason.getCode());
+        Assertions.assertTrue(reason.getMsg().contains("kafka broker unreachable"), reason.getMsg());
+    }
+
+    @Test
+    public void testUpdateKafkaPausedAutoSchedule(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 14L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<ScheduleRule>() {
+            @Mock
+            public boolean isNeedAutoSchedule(RoutineLoadJob job) {
+                return true;
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(113L, "test", dbId, 22L, "brokerList", "topic");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+    }
+
+    @Test
+    public void testUpdateKafkaPausedNoAutoSchedule(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 15L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<ScheduleRule>() {
+            @Mock
+            public boolean isNeedAutoSchedule(RoutineLoadJob job) {
+                return false;
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(114L, "test", dbId, 22L, "brokerList", "topic");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        routineLoadJob.update();
+
+        // PAUSED with isNeedAutoSchedule=false -> state stays PAUSED
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+    }
+
+    @Test
+    public void testUpdateKafkaCustomPartitions(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 16L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(115L, "test", dbId, 22L, "brokerList", "topic");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        Deencapsulation.setField(routineLoadJob, "customKafkaPartitions", Lists.newArrayList(5, 6, 7));
+        routineLoadJob.update();
+
+        // customKafkaPartitions short-circuits the fetch; currentKafkaPartitions becomes customKafkaPartitions,
+        // state stays RUNNING (no reschedule triggered).
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assertions.assertEquals(Lists.newArrayList(5, 6, 7),
+                Deencapsulation.getField(routineLoadJob, "currentKafkaPartitions"));
+    }
+
+    @Test
+    public void testUpdateKafkaStoppedSnapshotIsNull(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 17L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(116L, "test", dbId, 22L, "brokerList", "topic");
+        // STOPPED is a final state - takeFetchSnapshot returns null, refreshPartitionsIfNeeded returns early.
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.STOPPED);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.STOPPED, routineLoadJob.getState());
+    }
+
+    @Test
+    public void testUpdatePulsarPartitionsChanged(@Injectable PulsarProgress pulsarProgress) throws StarRocksException {
+        long dbId = 18L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<PulsarUtil>() {
+            @Mock
+            public List<String> getAllPulsarPartitions(String serviceUrl, String topic, String subscription,
+                                                      ImmutableMap<String, String> properties,
+                                                      ComputeResource computeResource) throws StarRocksException {
+                return Lists.newArrayList("p1", "p2", "p3");
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(211L, "test", dbId, 22L,
+                "http://pulsar-service", "topic1", "sub1");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", pulsarProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+        Assertions.assertEquals(Lists.newArrayList("p1", "p2", "p3"),
+                Deencapsulation.getField(routineLoadJob, "currentPulsarPartitions"));
+    }
+
+    @Test
+    public void testUpdatePulsarFetchErrorPauses(@Injectable PulsarProgress pulsarProgress) throws StarRocksException {
+        long dbId = 19L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<PulsarUtil>() {
+            @Mock
+            public List<String> getAllPulsarPartitions(String serviceUrl, String topic, String subscription,
+                                                      ImmutableMap<String, String> properties,
+                                                      ComputeResource computeResource) throws StarRocksException {
+                throw new StarRocksException("pulsar service unreachable");
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(212L, "test", dbId, 22L,
+                "http://pulsar-service", "topic1", "sub1");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.NEED_SCHEDULE);
+        Deencapsulation.setField(routineLoadJob, "progress", pulsarProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        ErrorReason reason = routineLoadJob.pauseReason;
+        Assertions.assertEquals(InternalErrorCode.PARTITIONS_ERR, reason.getCode());
+        Assertions.assertTrue(reason.getMsg().contains("pulsar service unreachable"), reason.getMsg());
+    }
+
+    @Test
+    public void testUpdatePulsarPausedAutoSchedule(@Injectable PulsarProgress pulsarProgress) throws StarRocksException {
+        long dbId = 20L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<ScheduleRule>() {
+            @Mock
+            public boolean isNeedAutoSchedule(RoutineLoadJob job) {
+                return true;
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(213L, "test", dbId, 22L,
+                "http://pulsar-service", "topic1", "sub1");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+        Deencapsulation.setField(routineLoadJob, "progress", pulsarProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+    }
+
+    @Test
+    public void testUpdatePulsarCustomPartitions(@Injectable PulsarProgress pulsarProgress) throws StarRocksException {
+        long dbId = 21L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        RoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(214L, "test", dbId, 22L,
+                "http://pulsar-service", "topic1", "sub1");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", pulsarProgress);
+        Deencapsulation.setField(routineLoadJob, "customPulsarPartitions", Lists.newArrayList("p5", "p6"));
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assertions.assertEquals(Lists.newArrayList("p5", "p6"),
+                Deencapsulation.getField(routineLoadJob, "currentPulsarPartitions"));
+    }
+
+    @Test
+    public void testUpdateKafkaStaleFetchDiscarded(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
+        long dbId = 30L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        // Hold a reference the mock can mutate to simulate a concurrent ALTER that bumps
+        // dataSourceConfigVersion while the fetch is in flight.
+        final RoutineLoadJob[] jobRef = new RoutineLoadJob[1];
+        new MockUp<KafkaUtil>() {
+            @Mock
+            public List<Integer> getAllKafkaPartitions(String brokerList, String topic,
+                                                       ImmutableMap<String, String> properties,
+                                                       ComputeResource computeResource) throws StarRocksException {
+                long v = (Long) Deencapsulation.getField(jobRef[0], "dataSourceConfigVersion");
+                Deencapsulation.setField(jobRef[0], "dataSourceConfigVersion", v + 1);
+                return Lists.newArrayList(1, 2, 3);
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(117L, "test", dbId, 22L, "brokerList", "topic");
+        jobRef[0] = routineLoadJob;
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+        routineLoadJob.update();
+
+        // Snapshot captured version 0; mock bumped to 1 mid-fetch; applyFetchResult sees
+        // version mismatch and discards. Job stays RUNNING with empty currentKafkaPartitions.
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        List<Integer> current = Deencapsulation.getField(routineLoadJob, "currentKafkaPartitions");
+        Assertions.assertTrue(current.isEmpty(), "currentKafkaPartitions should not be updated when configVersion changes");
+    }
+
+    @Test
+    public void testUpdatePulsarStaleFetchDiscarded(@Injectable PulsarProgress pulsarProgress)
+            throws StarRocksException {
+        long dbId = 31L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        final RoutineLoadJob[] jobRef = new RoutineLoadJob[1];
+        new MockUp<PulsarUtil>() {
+            @Mock
+            public List<String> getAllPulsarPartitions(String serviceUrl, String topic, String subscription,
+                                                      ImmutableMap<String, String> properties,
+                                                      ComputeResource computeResource) throws StarRocksException {
+                long v = (Long) Deencapsulation.getField(jobRef[0], "dataSourceConfigVersion");
+                Deencapsulation.setField(jobRef[0], "dataSourceConfigVersion", v + 1);
+                return Lists.newArrayList("p1", "p2", "p3");
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(216L, "test", dbId, 22L,
+                "http://pulsar-service", "topic1", "sub1");
+        jobRef[0] = routineLoadJob;
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", pulsarProgress);
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        List<String> current = Deencapsulation.getField(routineLoadJob, "currentPulsarPartitions");
+        Assertions.assertTrue(current.isEmpty(),
+                "currentPulsarPartitions should not be updated when configVersion changes");
+    }
+
+    @Test
+    public void testUpdatePulsarPartitionsContainsAllShrink(@Injectable PulsarProgress pulsarProgress)
+            throws StarRocksException {
+        long dbId = 22L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+
+        new MockUp<PulsarUtil>() {
+            @Mock
+            public List<String> getAllPulsarPartitions(String serviceUrl, String topic, String subscription,
+                                                      ImmutableMap<String, String> properties,
+                                                      ComputeResource computeResource) throws StarRocksException {
+                return Lists.newArrayList("p1", "p2");
+            }
+        };
+
+        RoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(215L, "test", dbId, 22L,
+                "http://pulsar-service", "topic1", "sub1");
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "progress", pulsarProgress);
+        Deencapsulation.setField(routineLoadJob, "currentPulsarPartitions", Lists.newArrayList("p1", "p2", "p3"));
+        routineLoadJob.update();
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+        Assertions.assertEquals(Lists.newArrayList("p1", "p2"),
+                Deencapsulation.getField(routineLoadJob, "currentPulsarPartitions"));
+    }
+
+    @Test
+    public void testUpdateNumOfDataErrorRowMoreThanMax() {
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         Deencapsulation.setField(routineLoadJob, "maxErrorNum", 0);
         Deencapsulation.setField(routineLoadJob, "maxBatchRows", 0);
         Deencapsulation.invoke(routineLoadJob, "updateNumOfData", 1L, 1L, 0L, 1L, 1L, false);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.PAUSED, Deencapsulation.getField(routineLoadJob, "state"));
-
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        ErrorReason reason = routineLoadJob.pauseReason;
+        Assertions.assertEquals(InternalErrorCode.TOO_MANY_FAILURE_ROWS_ERR, reason.getCode());
+        Assertions.assertEquals(
+                "Current error rows: 1 is more than max error num: 0. Check the 'TrackingSQL' field for detailed information. " +
+                        "If you are sure that the data has many errors, you can set 'max_error_number' property " +
+                        "to a greater value through ALTER ROUTINE LOAD and RESUME the job",
+                reason.getMsg());
     }
 
     @Test
     public void testPartialUpdateMode(@Mocked GlobalStateMgr globalStateMgr) {
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
-        Assert.assertEquals(routineLoadJob.getPartialUpdateMode(), "row");
+        Assertions.assertEquals(routineLoadJob.getPartialUpdateMode(), "row");
     }
 
     @Test
@@ -272,9 +846,9 @@ public class RoutineLoadJobTest {
         Deencapsulation.setField(routineLoadJob, "currentTotalRows", 99);
         Deencapsulation.invoke(routineLoadJob, "updateNumOfData", 2L, 0L, 0L, 1L, 1L, false);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, Deencapsulation.getField(routineLoadJob, "state"));
-        Assert.assertEquals(new Long(0), Deencapsulation.getField(routineLoadJob, "currentErrorRows"));
-        Assert.assertEquals(new Long(0), Deencapsulation.getField(routineLoadJob, "currentTotalRows"));
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, Deencapsulation.getField(routineLoadJob, "state"));
+        Assertions.assertEquals(Long.valueOf(0), Deencapsulation.getField(routineLoadJob, "currentErrorRows"));
+        Assertions.assertEquals(Long.valueOf(0), Deencapsulation.getField(routineLoadJob, "currentTotalRows"));
 
     }
 
@@ -295,6 +869,7 @@ public class RoutineLoadJobTest {
         String jsonRoot = "$.RECORDS";
         String taskTimeout = "20";
         String taskConsumeTime = "3";
+        String pauseOnFatalParseError = "false";
         String originStmt = "alter routine load for db.job1 " +
                 "properties (" +
                 "   \"desired_concurrent_number\" = \"" + desiredConcurrentNumber + "\"," +
@@ -305,6 +880,7 @@ public class RoutineLoadJobTest {
                 "   \"task_consume_second\" = \"" + taskConsumeTime + "\"," +
                 "   \"task_timeout_second\" = \"" + taskTimeout + "\"," +
                 "   \"strict_mode\" = \"" + strictMode + "\"," +
+                "   \"pause_on_fatal_parse_error\" = \"" + pauseOnFatalParseError + "\"," +
                 "   \"timezone\" = \"" + timeZone + "\"," +
                 "   \"jsonpaths\" = \"" + jsonPaths + "\"," +
                 "   \"strip_outer_array\" = \"" + stripOuterArray + "\"," +
@@ -315,27 +891,28 @@ public class RoutineLoadJobTest {
             System.out.println("Key: " + key);
             System.out.println("Value: " + stmt.getAnalyzedJobProperties().get(key));
         }
-        routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
-                stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
-        Assert.assertEquals(Integer.parseInt(desiredConcurrentNumber),
+        routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                stmt.getDataSourceProperties());
+        Assertions.assertEquals(Integer.parseInt(desiredConcurrentNumber),
                 (int) Deencapsulation.getField(routineLoadJob, "desireTaskConcurrentNum"));
-        Assert.assertEquals(Long.parseLong(maxBatchInterval),
+        Assertions.assertEquals(Long.parseLong(maxBatchInterval),
                 (long) Deencapsulation.getField(routineLoadJob, "taskSchedIntervalS"));
-        Assert.assertEquals(Long.parseLong(maxErrorNumber),
+        Assertions.assertEquals(Long.parseLong(maxErrorNumber),
                 (long) Deencapsulation.getField(routineLoadJob, "maxErrorNum"));
-        Assert.assertEquals(Double.parseDouble(maxFilterRatio),
+        Assertions.assertEquals(Double.parseDouble(maxFilterRatio),
                 (double) Deencapsulation.getField(routineLoadJob, "maxFilterRatio"), 0.01);
-        Assert.assertEquals(Long.parseLong(taskTimeout),
+        Assertions.assertEquals(Long.parseLong(taskTimeout),
                 (long) Deencapsulation.getField(routineLoadJob, "taskTimeoutSecond"));
-        Assert.assertEquals(Long.parseLong(taskConsumeTime),
+        Assertions.assertEquals(Long.parseLong(taskConsumeTime),
                 (long) Deencapsulation.getField(routineLoadJob, "taskConsumeSecond"));
-        Assert.assertEquals(Long.parseLong(maxBatchRows),
+        Assertions.assertEquals(Long.parseLong(maxBatchRows),
                 (long) Deencapsulation.getField(routineLoadJob, "maxBatchRows"));
-        Assert.assertEquals(Boolean.parseBoolean(strictMode), routineLoadJob.isStrictMode());
-        Assert.assertEquals(timeZone, routineLoadJob.getTimezone());
-        Assert.assertEquals(jsonPaths.replace("\\", ""), routineLoadJob.getJsonPaths());
-        Assert.assertEquals(Boolean.parseBoolean(stripOuterArray), routineLoadJob.isStripOuterArray());
-        Assert.assertEquals(jsonRoot, routineLoadJob.getJsonRoot());
+        Assertions.assertEquals(Boolean.parseBoolean(strictMode), routineLoadJob.isStrictMode());
+        Assertions.assertEquals(timeZone, routineLoadJob.getTimezone());
+        Assertions.assertEquals(jsonPaths.replace("\\", ""), routineLoadJob.getJsonPaths());
+        Assertions.assertEquals(Boolean.parseBoolean(stripOuterArray), routineLoadJob.isStripOuterArray());
+        Assertions.assertEquals(jsonRoot, routineLoadJob.getJsonRoot());
+        Assertions.assertEquals(Boolean.parseBoolean(pauseOnFatalParseError), routineLoadJob.isPauseOnFatalParseError());
     }
 
     @Test
@@ -352,15 +929,15 @@ public class RoutineLoadJobTest {
                 "   \"property.client.id\" = \"" + clientId + "\"," +
                 "   \"property.kafka_default_offsets\" = \"" + defaultOffsets + "\"" +
                 ")";
-        routineLoadJob.setOrigStmt(new OriginStatement(originStmt, 0));
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
         AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(originStmt, connectContext);
-        routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
-                stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
+        routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                stmt.getDataSourceProperties());
         routineLoadJob.convertCustomProperties(true);
         Map<String, String> properties = routineLoadJob.getConvertedCustomProperties();
-        Assert.assertEquals(groupId, properties.get("group.id"));
-        Assert.assertEquals(clientId, properties.get("client.id"));
-        Assert.assertEquals(-2L,
+        Assertions.assertEquals(groupId, properties.get("group.id"));
+        Assertions.assertEquals(clientId, properties.get("client.id"));
+        Assertions.assertEquals(-2L,
                 (long) Deencapsulation.getField(routineLoadJob, "kafkaDefaultOffSet"));
     }
 
@@ -375,15 +952,85 @@ public class RoutineLoadJobTest {
                 "COLUMNS TERMINATED BY \",\"," +
                 "PARTITION(p1, p2, p3)," +
                 "ROWS TERMINATED BY \"A\"";
-        routineLoadJob.setOrigStmt(new OriginStatement(originStmt, 0));
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
         AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(originStmt, connectContext);
-        routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
-                stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
-        Assert.assertEquals("a,b,c,d=a", Joiner.on(",").join(routineLoadJob.getColumnDescs()));
-        Assert.assertEquals("`a` = 1", routineLoadJob.getWhereExpr().toSql());
-        Assert.assertEquals("','", routineLoadJob.getColumnSeparator().toString());
-        Assert.assertEquals("'A'", routineLoadJob.getRowDelimiter().toString());
-        Assert.assertEquals("p1,p2,p3", Joiner.on(",").join(routineLoadJob.getPartitions().getPartitionNames()));
+        routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                stmt.getDataSourceProperties());
+
+        List<ImportColumnDesc> columnDescs = routineLoadJob.getColumnDescs();
+        Assertions.assertNotNull(columnDescs);
+        Assertions.assertEquals(4, columnDescs.size());
+        Assertions.assertEquals("a", columnDescs.get(0).getColumnName());
+        Assertions.assertEquals("b", columnDescs.get(1).getColumnName());
+        Assertions.assertEquals("c", columnDescs.get(2).getColumnName());
+        ImportColumnDesc expressionColumn = columnDescs.get(3);
+        Assertions.assertEquals("d", expressionColumn.getColumnName());
+        Assertions.assertTrue(expressionColumn.getExpr() instanceof SlotRef);
+        SlotRef expressionSlotRef = (SlotRef) expressionColumn.getExpr();
+        Assertions.assertEquals("a", expressionSlotRef.getColumnName());
+
+        Assertions.assertTrue(routineLoadJob.getWhereExpr() instanceof BinaryPredicate);
+        BinaryPredicate predicate = (BinaryPredicate) routineLoadJob.getWhereExpr();
+        Assertions.assertEquals(BinaryType.EQ, predicate.getOp());
+        Assertions.assertTrue(predicate.getChild(0) instanceof SlotRef);
+        SlotRef leftSlotRef = (SlotRef) predicate.getChild(0);
+        Assertions.assertEquals("a", leftSlotRef.getColumnName());
+        Assertions.assertTrue(predicate.getChild(1) instanceof IntLiteral);
+        IntLiteral rightLiteral = (IntLiteral) predicate.getChild(1);
+        Assertions.assertEquals(1L, rightLiteral.getLongValue());
+
+        ColumnSeparator columnSeparator = routineLoadJob.getColumnSeparator();
+        Assertions.assertEquals(",", columnSeparator.getOriSeparator());
+        RowDelimiter rowDelimiter = routineLoadJob.getRowDelimiter();
+        Assertions.assertEquals("A", rowDelimiter.getOriDelimiter());
+
+        PartitionNames partitions = routineLoadJob.getPartitions();
+        Assertions.assertNotNull(partitions);
+        Assertions.assertEquals(Lists.newArrayList("p1", "p2", "p3"), partitions.getPartitionNames());
+    }
+
+    @Test
+    public void testKafkaRoutineLoadJobValidBrokerList() throws Exception {
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(1L, "job",
+                2L, 3L, "192.168.1.1:9092", "topic");
+        ConnectContext connectContext = UtFrameUtils.createDefaultCtx();
+
+        String validStmt = "alter routine load for db.job1 " +
+                "FROM KAFKA (\"kafka_broker_list\" = \"192.168.1.2:9092,192.168.1.3:9092\")";
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(validStmt, 0));
+
+        try {
+            AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(validStmt, connectContext);
+            routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                    stmt.getDataSourceProperties());
+
+            // Verify broker list was updated successfully
+            Assertions.assertEquals("192.168.1.2:9092,192.168.1.3:9092", routineLoadJob.getBrokerList());
+        } catch (Exception e) {
+            Assertions.fail("Valid broker list should not throw exception");
+        }
+    }
+
+    @Test
+    public void testKafkaRoutineLoadJobInvalidBrokerList() throws Exception {
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(1L, "job",
+                2L, 3L, "192.168.1.1:9092", "topic");
+        ConnectContext connectContext = UtFrameUtils.createDefaultCtx();
+
+        String invalidStmt = "alter routine load for db.job1 " +
+                "FROM KAFKA (\"kafka_broker_list\" = \"invalid_broker_format\")";
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(invalidStmt, 0));
+
+        try {
+            AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(invalidStmt, connectContext);
+            routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                    stmt.getDataSourceProperties(), new OriginStatementInfo(invalidStmt, 0));
+            Assertions.fail("Invalid broker list should throw DdlException");
+        } catch (Exception e) {
+            // This should trigger the catch block on line 841-842
+            Assertions.assertTrue(e.getMessage().contains("does not match pattern"),
+                    "Should contain validation error message");
+        }
     }
 
     @Test
@@ -393,35 +1040,35 @@ public class RoutineLoadJobTest {
         String originStmt = "CREATE ROUTINE LOAD job ON unknown " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")";
-        routineLoadJob.setOrigStmt(new OriginStatement(originStmt, 0));
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
 
         // alter columns terminator
-        RoutineLoadDesc loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        RoutineLoadDesc loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS TERMINATED BY ';'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY ';' " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter rows terminator
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "ROWS TERMINATED BY '\n'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n' " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter columns
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS(`a`, `b`, `c`=1)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1) " +
@@ -429,11 +1076,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter partition
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "TEMPORARY PARTITION(`p1`, `p2`)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -442,11 +1089,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter where
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "WHERE a = 1", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -456,11 +1103,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter columns terminator again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS TERMINATED BY '\t'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -470,11 +1117,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter rows terminator again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "ROWS TERMINATED BY 'a'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -484,11 +1131,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter columns again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS(`a`)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -497,11 +1144,11 @@ public class RoutineLoadJobTest {
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
         // alter partition again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         " PARTITION(`p1`, `p2`)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -511,11 +1158,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter where again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "WHERE a = 5", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -525,11 +1172,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter where again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "WHERE a = 5 and b like 'c1%' and c between 1 and 100 and substring(d,1,5) = 'cefd' ", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `unknown` " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -540,5 +1187,258 @@ public class RoutineLoadJobTest {
                 "AND (substring(`d`, 1, 5) = 'cefd') " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
+    }
+
+    @Test
+    public void testMergeLoadDescToOriginStatementWithReservedKeywordTable() throws Exception {
+        // The table name "order" is a reserved keyword. getTableName() returns it without
+        // backquotes, so the regenerated statement must add backquotes itself; otherwise the
+        // persisted SQL fails to be re-parsed on FE restart and routineLoadDesc becomes null.
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(1L, "job",
+                2L, 3L, "192.168.1.2:10000", "topic") {
+            @Override
+            public String getTableName() {
+                return "order";
+            }
+        };
+        String originStmt = "CREATE ROUTINE LOAD job ON `order` " +
+                "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
+                "FROM KAFKA (\"kafka_topic\" = \"my_topic\")";
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
+
+        RoutineLoadDesc loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
+                "ALTER ROUTINE LOAD FOR job COLUMNS(`a`, `b`, `c` = 1)", 0), null);
+        routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
+
+        // The regenerated statement must keep the reserved-keyword table name backquoted.
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `order` " +
+                "COLUMNS(`a`, `b`, `c` = 1) " +
+                "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
+                "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
+
+        // Re-parsing the persisted statement must succeed (this is what happens on FE restart).
+        RoutineLoadDesc reparsed = CreateRoutineLoadStmt.getLoadDesc(routineLoadJob.getOrigStmt(), null);
+        Assertions.assertNotNull(reparsed);
+    }
+
+    @Test
+    public void testMergeLoadDescToOriginStatementWithBackquoteInTableName() throws Exception {
+        // A table name that itself contains a backquote must have the embedded backquote doubled
+        // (ta`ble -> `ta``ble`), otherwise the regenerated statement is malformed and cannot be
+        // re-parsed on FE restart. Naive string concatenation (`%s`) would produce `ta`ble`, which
+        // is unparseable.
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(1L, "job",
+                2L, 3L, "192.168.1.2:10000", "topic") {
+            @Override
+            public String getTableName() {
+                return "ta`ble";
+            }
+        };
+        String originStmt = "CREATE ROUTINE LOAD `job` ON `ta``ble` " +
+                "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
+                "FROM KAFKA (\"kafka_topic\" = \"my_topic\")";
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
+
+        RoutineLoadDesc loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
+                "ALTER ROUTINE LOAD FOR job COLUMNS(`a`, `b`, `c` = 1)", 0), null);
+        routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
+
+        // The embedded backquote must be escaped (doubled) in the regenerated statement.
+        Assertions.assertEquals("CREATE ROUTINE LOAD `job` ON `ta``ble` " +
+                "COLUMNS(`a`, `b`, `c` = 1) " +
+                "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
+                "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
+
+        // Re-parsing the persisted statement must succeed: `ta``ble` is a single valid
+        // BACKQUOTED_IDENTIFIER token, so getLoadDesc() parses it and routineLoadDesc is preserved.
+        // Naive concatenation (`ta`ble`) would instead be a parse error, dropping routineLoadDesc.
+        RoutineLoadDesc reparsed = CreateRoutineLoadStmt.getLoadDesc(routineLoadJob.getOrigStmt(), null);
+        Assertions.assertNotNull(reparsed);
+    }
+
+    @Test
+    public void testAfterAbortedNonRetryableAttachment(@Injectable TransactionState transactionState,
+                                                        @Injectable RoutineLoadTaskInfo routineLoadTaskInfo)
+            throws StarRocksException {
+
+        List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+        routineLoadTaskInfoList.add(routineLoadTaskInfo);
+        long txnId = 1L;
+
+        RLTaskTxnCommitAttachment attachment = new RLTaskTxnCommitAttachment();
+        Deencapsulation.setField(attachment, "nonRetryable", true);
+
+        new Expectations() {
+            {
+                transactionState.getTransactionId();
+                minTimes = 0;
+                result = txnId;
+                routineLoadTaskInfo.getTxnId();
+                minTimes = 0;
+                result = txnId;
+                transactionState.getTxnCommitAttachment();
+                minTimes = 0;
+                result = attachment;
+            }
+        };
+
+        new MockUp<RoutineLoadJob>() {
+            @Mock
+            void writeUnlock() {
+            }
+        };
+
+        // non-retryable attachment should cause pause even with unrecognized reason
+        String txnStatusChangeReasonString = "primary key size exceed the limit";
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        routineLoadJob.afterAborted(transactionState, txnStatusChangeReasonString);
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+    }
+
+    @Test
+    public void testAfterAbortedRetryableAttachment(@Mocked RoutineLoadMgr routineLoadMgr,
+                                                     @Injectable TransactionState transactionState,
+                                                     @Injectable KafkaTaskInfo routineLoadTaskInfo)
+            throws StarRocksException {
+
+        Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
+        List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+        routineLoadTaskInfoList.add(routineLoadTaskInfo);
+        long txnId = 1L;
+
+        RLTaskTxnCommitAttachment attachment = new RLTaskTxnCommitAttachment();
+        Deencapsulation.setField(attachment, "nonRetryable", false);
+        TKafkaRLTaskProgress tKafkaRLTaskProgress = new TKafkaRLTaskProgress();
+        tKafkaRLTaskProgress.partitionCmtOffset = Maps.newHashMap();
+        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+        Deencapsulation.setField(attachment, "progress", kafkaProgress);
+
+        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+
+        new Expectations() {
+            {
+                transactionState.getTransactionId();
+                minTimes = 0;
+                result = txnId;
+                routineLoadTaskInfo.getTxnId();
+                minTimes = 0;
+                result = txnId;
+                transactionState.getTxnCommitAttachment();
+                minTimes = 0;
+                result = attachment;
+                routineLoadTaskInfo.getPartitions();
+                minTimes = 0;
+                result = Lists.newArrayList();
+                routineLoadTaskInfo.getId();
+                minTimes = 0;
+                result = UUIDUtil.genUUID();
+                routineLoadMgr.getJob(anyLong);
+                minTimes = 0;
+                result = routineLoadJob;
+            }
+        };
+
+        new MockUp<RoutineLoadJob>() {
+            @Mock
+            void writeUnlock() {
+            }
+        };
+
+        // retryable attachment should keep job running
+        String txnStatusChangeReasonString = "some transient error";
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+        Deencapsulation.setField(routineLoadJob, "progress", currentProgress);
+        routineLoadJob.afterAborted(transactionState, txnStatusChangeReasonString);
+
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+    }
+
+    @Test
+    public void testPauseOnFatalParseError(@Injectable TransactionState transactionState,
+                                           @Injectable RoutineLoadTaskInfo routineLoadTaskInfo)
+            throws StarRocksException {
+        long txnId = 1L;
+        new Expectations() {
+            {
+                transactionState.getTransactionId();
+                minTimes = 0;
+                result = txnId;
+                transactionState.getTxnCommitAttachment();
+                minTimes = 0;
+                result = null;
+                routineLoadTaskInfo.getTxnId();
+                minTimes = 0;
+                result = txnId;
+                routineLoadTaskInfo.getId();
+                minTimes = 0;
+                result = UUIDUtil.genUUID();
+            }
+        };
+
+        new MockUp<KafkaRoutineLoadJob>() {
+            @Mock
+            void writeUnlock() {
+            }
+
+            @Mock
+            RoutineLoadTaskInfo unprotectRenewTask(long timeToExecuteMs, RoutineLoadTaskInfo routineLoadTaskInfo) {
+                return routineLoadTaskInfo;
+            }
+        };
+
+        // pauseOnFatalParseError = false
+        {
+            new MockUp<GlobalStateMgr>() {
+                @Mock
+                public RoutineLoadTaskScheduler getRoutineLoadTaskScheduler() {
+                    return new RoutineLoadTaskScheduler();
+                }
+            };
+
+            List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+            routineLoadTaskInfoList.add(routineLoadTaskInfo);
+            RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+            routineLoadJob.afterAborted(transactionState,
+                    TxnStatusChangeReason.PARSE_ERROR.toString());
+            System.out.println(routineLoadJob.getPauseReason());
+            Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        }
+
+        // pauseOnFatalParseError = true
+        {
+            List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+            routineLoadTaskInfoList.add(routineLoadTaskInfo);
+            RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+            ((Map<String, String>) Deencapsulation.getField(routineLoadJob, "jobProperties"))
+                    .put("pause_on_fatal_parse_error", "true");
+            routineLoadJob.afterAborted(transactionState,
+                    TxnStatusChangeReason.PARSE_ERROR.toString());
+            Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+            String errorMsg =
+                    "ErrorReason{errCode = 5611, msg='parse error. Check the 'TrackingSQL' field for detailed information.'}";
+            Assertions.assertEquals(errorMsg, routineLoadJob.getPauseReason());
+        }
+    }
+
+    @Test
+    public void testRoutineLoadEnvelope() throws StarRocksException {
+        Map<String, String> jobProperties = Maps.newHashMap();
+        jobProperties.put(CreateRoutineLoadStmt.FORMAT, "json");
+        jobProperties.put(CreateRoutineLoadStmt.ENVELOPE, CreateRoutineLoadStmt.ENVELOPE_DEBEZIUM);
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        Deencapsulation.setField(routineLoadJob, "jobProperties", jobProperties);
+
+        Assertions.assertEquals(CreateRoutineLoadStmt.ENVELOPE_DEBEZIUM, routineLoadJob.getEnvelope());
     }
 }
